Force thread flags for all Unixware builds if threading is requested.
This is required because once you link with a library that uses threads,
all references to that library have to use thread flags.

--- a/src/Makefile.global.in
+++ b/src/Makefile.global.in
@@ -177,6 +177,12 @@ ifeq ($(GCC), yes)
   CFLAGS += -Wall -Wmissing-prototypes -Wmissing-declarations
 endif
 
+# Unixware needs threads for everything that uses libpq
+ifeq ($(PORTNAME),unixware)
+  CFLAGS += "$PTHREAD_CFLAGS"
+endif
+
+
 # Kind-of compilers
 
 YACC = @YACC@
