--- a/configure.in
+++ b/configure.in
@@ -1236,16 +1236,15 @@ AC_CONFIG_LINKS([
   src/Makefile.port:src/makefiles/Makefile.${template}
 ])
 
-case $host_os in mingw*)
-AC_OUTPUT_COMMANDS([
+case $host_os in mingw*);;
+*)
+AC_CONFIG_COMMANDS([check_win32_symlinks],[
 # Links sometimes fail undetected on Mingw - 
 # so here we detect it and warn the user
 for FILE in "$CONFIG_LINKS"
  do
 	# test -e works for symlinks in the MinGW console
-	# We can't call AC_MSG_WARN from here, so we expand it
-	test -e `expr "$FILE" : '\(^:*\)'` || { echo "$as_me:$LINENO: WARNING: *** link for $FILE - please fix by hand" >&5
-echo "$as_me: WARNING: *** link for $FILE - please fix by hand" >&2;}
+	test -e `expr "$FILE" : '\(^:*\)'` || AC_MSG_WARN([*** link for $FILE - please fix by hand])
  done
 ])
 	;;
