--- a/src/interfaces/libpq/Makefile
+++ b/src/interfaces/libpq/Makefile
@@ -18,14 +18,8 @@ NAME= pq
 SO_MAJOR_VERSION= 3
 SO_MINOR_VERSION= 2
 
-override CPPFLAGS := -I$(srcdir) $(CPPFLAGS) $(PTHREAD_CFLAGS) -DFRONTEND -DSYSCONFDIR='"$(sysconfdir)"'
-override CFLAGS += $(PTHREAD_CFLAGS) \
-		     -DPGBINDIR=\"$(bindir)\" \
-		     -DPGDATADIR=\"$(datadir)\" \
-		     -DSYSCONFDIR='"$(sysconfdir)"' \
-		     -DINCLUDEDIR=\"$(includedir)\" \
-		     -DPKGINCLUDEDIR=\"$(pkgincludedir)\" \
-		     -DPKGLIBDIR=\"$(pkglibdir)\"
+override CPPFLAGS := -I$(srcdir) $(CPPFLAGS) -I$(top_builddir)/src/port -DFRONTEND
+override CFLAGS += $(PTHREAD_CFLAGS)
 
 OBJS=	fe-auth.o fe-connect.o fe-exec.o fe-misc.o fe-print.o fe-lobj.o \
 	fe-protocol2.o fe-protocol3.o pqexpbuffer.o pqsignal.o fe-secure.o \
