--- a/src/port/Makefile
+++ b/src/port/Makefile
@@ -15,13 +15,6 @@ subdir = src/port
 top_builddir = ../..
 include $(top_builddir)/src/Makefile.global
 
-override CPPFLAGS += -DPGBINDIR=\"$(bindir)\" \
-		     -DPGDATADIR=\"$(datadir)\" \
-		     -DSYSCONFDIR='"$(sysconfdir)"' \
-		     -DINCLUDEDIR=\"$(includedir)\" \
-		     -DPKGINCLUDEDIR=\"$(pkgincludedir)\" \
-		     -DPKGLIBDIR=\"$(pkglibdir)\"
-
 ifdef LIBOBJS
 all: libpgport.a
 endif
@@ -32,5 +25,16 @@ libpgport.a: $(LIBOBJS)
 thread.o: thread.c
 	$(CC) $(CFLAGS) $(CPPFLAGS) $(PTHREAD_CFLAGS) -c $<
 
+path.o: path.c pg_config_paths.h
+
+# Dependency is to ensure that path changes propagate
+pg_config_paths.h: $(top_builddir)/src/Makefile.global
+	echo "#define PGBINDIR \"$(bindir)\"" >$@
+	echo "#define PGSHAREDIR \"$(datadir)\"" >>$@
+	echo "#define SYSCONFDIR \"$(sysconfdir)\"" >>$@
+	echo "#define INCLUDEDIR \"$(includedir)\"" >>$@
+	echo "#define PKGINCLUDEDIR \"$(pkgincludedir)\"" >>$@
+	echo "#define PKGLIBDIR \"$(pkglibdir)\"" >>$@
+
 clean distclean maintainer-clean:
-	rm -f libpgport.a $(LIBOBJS)
+	rm -f libpgport.a $(LIBOBJS) pg_config_paths.h
