--- a/src/interfaces/ecpg/pgtypeslib/Makefile
+++ b/src/interfaces/ecpg/pgtypeslib/Makefile
@@ -23,7 +23,8 @@ override CPPFLAGS := -I$(top_srcdir)/src/interfaces/ecpg/include \
 SHLIB_LINK += -lm
 
 OBJS= numeric.o datetime.o common.o dt_common.o timestamp.o interval.o \
-      $(filter rint.o, $(LIBOBJS)) $(filter pgstrcasecmp.o, $(LIBOBJS))
+	pgstrcasecmp.o \
+	$(filter rint.o, $(LIBOBJS))
 
 all: all-lib
 
