Recent commits added created files that weren't getting deleted by 'make clean'.

--- a/src/bin/pg_controldata/Makefile
+++ b/src/bin/pg_controldata/Makefile
@@ -37,4 +37,4 @@ uninstall:
 	rm -f $(DESTDIR)$(bindir)/pg_controldata$(X)
 
 clean distclean maintainer-clean:
-	rm -f pg_controldata$(X) pg_controldata.o pg_crc.o pg_crc.c exec.c
+	rm -f pg_controldata$(X) $(OBJS) pg_crc.c exec.c
