--- a/configure.in
+++ b/configure.in
@@ -891,6 +891,7 @@ esac
 case $host_os in mingw*)
 AC_LIBOBJ(copydir)
 AC_LIBOBJ(gettimeofday)
+AC_LIBOBJ(kill)
 AC_LIBOBJ(open)
 AC_LIBOBJ(rand) ;;
 esac
