--- a/src/Makefile.global.in
+++ b/src/Makefile.global.in
@@ -343,7 +343,7 @@ endif
 LIBOBJS = @LIBOBJS@ exec.o noblock.o path.o pipe.o pgsleep.o pgstrcasecmp.o sprompt.o thread.o
 
 ifneq (,$(LIBOBJS))
-LIBS += -lpgport
+LIBS := -lpgport $(LIBS)
 LDFLAGS := -L$(top_builddir)/src/port $(LDFLAGS)
 endif
 
