--- a/configure.in
+++ b/configure.in
@@ -1241,7 +1241,7 @@ AC_CONFIG_COMMANDS([check_win32_symlinks],[
 for FILE in $CONFIG_LINKS
  do
 	# test -e works for symlinks in the MinGW console
-	test -e `expr "$FILE" : '\(^:*\)'` || AC_MSG_WARN([*** link for $FILE - please fix by hand])
+	test -e `expr "$FILE" : '\([[^:]]*\)'` || AC_MSG_WARN([*** link for $FILE - please fix by hand])
  done
 ])
 	;;
