Do PGAC_FUNC_GETPWUID_R_5ARG check with the proper thread flags.  This fixes Solaris thread compiles.

--- a/configure.in
+++ b/configure.in
@@ -1059,9 +1059,10 @@ _LIBS="$LIBS"
 CFLAGS="$CFLAGS $THREAD_CPPFLAGS"
 LIBS="$LIBS $THREAD_LIBS"
 AC_CHECK_FUNCS([strerror_r getpwuid_r gethostbyname_r])
+# do this test with the proper thread flags
+PGAC_FUNC_GETPWUID_R_5ARG
 CFLAGS="$_CFLAGS"
 LIBS="$_LIBS"
-PGAC_FUNC_GETPWUID_R_5ARG
 fi
 
 
