initlocation is history.  (It's still mentioned in manage-ag.sgml, but I'll leave that file alone so as not to mess up the doc patch I trust Gavin is working on.)

--- a/src/bin/Makefile
+++ b/src/bin/Makefile
@@ -13,7 +13,7 @@ subdir = src/bin
 top_builddir = ../..
 include $(top_builddir)/src/Makefile.global
 
-DIRS := initdb initlocation ipcclean pg_ctl pg_dump \
+DIRS := initdb ipcclean pg_ctl pg_dump \
 	psql scripts pg_config pg_controldata pg_resetxlog
 
 all install installdirs uninstall depend distprep:
