--- a/src/backend/storage/lmgr/Makefile
+++ b/src/backend/storage/lmgr/Makefile
@@ -19,14 +19,17 @@ all: SUBSYS.o
 SUBSYS.o: $(OBJS)
 	$(LD) $(LDREL) $(LDOUT) SUBSYS.o $(OBJS)
 
-s_lock_test: s_lock.c
-	$(CC) $(CPPFLAGS) $(CFLAGS) -DS_LOCK_TEST=1 s_lock.c -o s_lock_test
+s_lock_test: s_lock.c $(top_builddir)/src/port/libpgport.a
+	$(CC) $(CPPFLAGS) $(CFLAGS) -DS_LOCK_TEST=1 s_lock.c \
+		-L $(top_builddir)/src/port -lpgport -o s_lock_test
+
+check: s_lock_test
 	./s_lock_test
 
 depend dep:
 	$(CC) -MM $(CFLAGS) *.c >depend
 
-clean: 
+clean distclean maintainer-clean: 
 	rm -f SUBSYS.o $(OBJS) s_lock_test
 
 ifeq (depend,$(wildcard depend))
