Add pgevent, with docs explaining out to install it on Win32.

--- a/src/bin/Makefile
+++ b/src/bin/Makefile
@@ -15,6 +15,9 @@ include $(top_builddir)/src/Makefile.global
 
 DIRS := initdb ipcclean pg_ctl pg_dump \
 	psql scripts pg_config pg_controldata pg_resetxlog
+ifeq ($(PORTNAME), win32)
+DIRS+=pgevent
+endif
 
 all install installdirs uninstall depend distprep:
 	@for dir in $(DIRS); do $(MAKE) -C $$dir $@ || exit; done
