Cause libpq and ecpg libraries to be built as proper shared libraries (.dylib format) on Mac OS X, while not messing up loadable modules for the backend (which are the same kind of animal as a shared library on every other platform, but not here).  Also get the naming convention to match OS X practice, viz libFOO.version.so not libFOO.so.version. In support of that last, refactor code in Makefile.shlib to make it easier to have platform-specific shlib naming conventions. This patch is loosely based on the Fink project's current postgresql.patch. Tested by yours truly on OS X 10.3.4; does anyone have 10.2.* to check it on?

--- a/src/interfaces/ecpg/ecpglib/Makefile
+++ b/src/interfaces/ecpg/ecpglib/Makefile
@@ -15,6 +15,7 @@ include $(top_builddir)/src/Makefile.global
 NAME= ecpg
 SO_MAJOR_VERSION= 4
 SO_MINOR_VERSION= 2
+DLTYPE= library
 
 override CPPFLAGS := -DFRONTEND -I$(top_srcdir)/src/interfaces/ecpg/include \
 	-I$(libpq_srcdir) -I$(top_builddir)/src/port $(CPPFLAGS)
