Rename AC_PROG_LD* macros to PGAC_PROG_LD*.  This avoids clashes with the macros provided by the real libtool, when other packages borrow some macros from PostgreSQL, as in the case of the ODBC driver.

--- a/configure.in
+++ b/configure.in
@@ -525,7 +525,7 @@ AC_MSG_NOTICE([using LDFLAGS=$LDFLAGS])
 AC_PROG_AWK
 PGAC_PATH_FLEX
 AC_PROG_LN_S
-AC_PROG_LD
+PGAC_PROG_LD
 AC_SUBST(LD)
 AC_SUBST(with_gnu_ld)
 case $host_os in sysv5*)
