PostgreSQL extension makefile framework ("pgxs"), by Fabien Coelho, with some massaging by Peter Eisentraut.  This is basically a simple generalization of the existing contrib makefiles.

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -11,16 +11,19 @@ include $(top_builddir)/src/Makefile.global
 all:
 	$(MAKE) -C doc all
 	$(MAKE) -C src all
+	$(MAKE) -C config all
 	@echo "All of PostgreSQL successfully made. Ready to install."
 
 install:
 	$(MAKE) -C doc install
 	$(MAKE) -C src install
+	$(MAKE) -C config install
 	@echo "PostgreSQL installation complete."
 
 installdirs uninstall distprep:
 	$(MAKE) -C doc $@
 	$(MAKE) -C src $@
+	$(MAKE) -C config $@
 
 install-all-headers:
 	$(MAKE) -C src $@
@@ -31,6 +34,7 @@ clean:
 	$(MAKE) -C doc $@
 	$(MAKE) -C contrib $@
 	$(MAKE) -C src $@
+	$(MAKE) -C config $@
 # Garbage from autoconf:
 	@rm -rf autom4te.cache/
 
@@ -39,6 +43,7 @@ clean:
 distclean maintainer-clean:
 	-$(MAKE) -C doc $@
 	-$(MAKE) -C contrib $@
+	-$(MAKE) -C config $@
 	-$(MAKE) -C src $@
 	-rm -f config.cache config.log config.status GNUmakefile
 # Garbage from autoconf:
