--- a/src/utils/Makefile
+++ b/src/utils/Makefile
@@ -12,7 +12,21 @@ subdir = src/utils
 top_builddir = ../..
 include $(top_builddir)/src/Makefile.global
 
+
+ifdef DLLINIT
+
 all:
+
+install: all installdirs
+	$(INSTALL_DATA) dllinit.o $(DESTDIR)$(pgxsdir)/$(subdir)/
+
+installdirs:
+	$(mkinstalldirs) $(DESTDIR)$(pgxsdir)/$(subdir)
+
+uninstall:
+	rm -f $(DESTDIR)$(pgxsdir)/$(subdir)/dllinit.o
 
 clean distclean maintainer-clean:
 	rm -f dllinit.o
+
+endif # not DLLINIT
