--- a/src/bin/pg_resetxlog/Makefile
+++ b/src/bin/pg_resetxlog/Makefile
@@ -40,4 +40,4 @@ uninstall:
 	rm -f $(DESTDIR)$(bindir)/pg_resetxlog$(X)
 
 clean distclean maintainer-clean:
-	rm -f pg_resetxlog$(X) pg_crc.c dirmod.c exec.c $(OBJS)
+	rm -f pg_resetxlog$(X) $(OBJS) pg_crc.c dirmod.c exec.c
