Quote PERL expansion for Win32 path that might have spaces.

--- a/src/Makefile.global.in
+++ b/src/Makefile.global.in
@@ -207,7 +207,7 @@ X = @EXEEXT@
 
 # Perl 
 
-PERL			= @PERL@
+PERL			= "@PERL@"	# quoted for pathname with spaces
 perl_archlibexp		= @perl_archlibexp@
 perl_privlibexp		= @perl_privlibexp@
 perl_useshrplib		= @perl_useshrplib@
